--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "antd-style": "^3.7.1",
     "axios": "^1.7.9",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-markdown": "^10.1.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
