--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "antd": "^5.24.3",
     "antd-style": "^3.7.1",
     "axios": "^1.8.1",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^10.1.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
+    "@types/lodash": "^4.17.16",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
