--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "antd": "^5.24.3",
     "antd-style": "^3.7.1",
     "axios": "^1.8.1",
+    "gsap": "^3.12.7",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
