--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
+    "@ant-design/pro-chat": "^1.15.3",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-clipboard-manager": "^2.2.1",
     "@tauri-apps/plugin-dialog": "^2.2.0",
@@ -34,13 +35,16 @@
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-markdown": "^10.1.0"
+    "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^15.6.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
     "@types/lodash": "^4.17.16",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react": "^4.3.4",
     "cross-env": "^7.0.3",
     "meta-json-schema": "^1.19.1",
@@ -57,5 +61,5 @@
       "meta-json-schema"
     ]
   },
-  "packageManager": "pnpm@10.6.0"
+  "packageManager": "pnpm@10.6.3"
 }
