--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ui",
+  "name": "ai-toolbox",
   "private": true,
   "version": "0.1.0",
   "type": "module",
@@ -26,7 +26,6 @@
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-process": "^2.2.0",
     "@tauri-apps/plugin-shell": "2.2.0",
-    "@tauri-apps/plugin-updater": "2.3.0",
     "@tauri-apps/plugin-window-state": "^2.2.1",
     "antd": "^5.24.3",
     "antd-style": "^3.7.1",
