--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "ui"
+name = "ai-toolbox"
 version = "0.1.0"
-description = "heliannuuthus ai client"
+description = "ai-toolbox"
 authors = ["heliannuuthus"]
 edition = "2021"
 
@@ -11,7 +11,7 @@ edition = "2021"
 # The `_lib` suffix may seem redundant but it is necessary
 # to make the lib name unique and wouldn't conflict with the bin name.
 # This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
-name = "ui_lib"
+name = "ai_toolbox_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
@@ -48,7 +48,6 @@ parking_lot = { version = "0.12.3", features = ["arc_lock"] }
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-autostart = "2.2.0"
 tauri-plugin-global-shortcut = "2.2.0"
-tauri-plugin-updater = "2.5.1"
 tauri-plugin-window-state = "2.2.1"
 
 
