--- a/src-tauri/packages/macos/entitlements.plist
+++ b/src-tauri/packages/macos/entitlements.plist
@@ -6,7 +6,7 @@
     <false/>
     <key>com.apple.security.application-groups</key>
     <array>
-        <string>com.heliannuuthus.ai.ui</string>
+        <string>com.heliannuuthus.ai.ai-toolbox</string>
     </array>
     <key>com.apple.security.inherit</key>
     <true/>
