--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -42,6 +42,7 @@ tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 tracing-appender = "0.2.3"
 parking_lot = { version = "0.12.3", features = ["arc_lock"] }
+mime_guess = "2.0.5"
 
 
 
