--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@ant-design/icons": "^5.6.1",
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@ant-design/x": "^1.0.6",
+    "@svgdotjs/svg.js": "^3.2.4",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-clipboard-manager": "^2.2.1",
     "@tauri-apps/plugin-dialog": "^2.2.0",
@@ -28,19 +29,28 @@
     "@tauri-apps/plugin-process": "^2.2.0",
     "@tauri-apps/plugin-shell": "2.2.0",
     "@tauri-apps/plugin-window-state": "^2.2.1",
+    "ahooks": "^3.8.4",
     "antd": "^5.24.3",
     "antd-style": "^3.7.1",
     "axios": "^1.8.1",
+    "dompurify": "^3.2.4",
+    "echarts-for-react": "^3.0.2",
     "gsap": "^3.12.7",
     "lodash-es": "^4.17.21",
+    "mermaid": "^11.6.0",
     "rc-upload": "^4.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.4.1",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^15.6.1",
+    "rehype-katex": "^7.0.1",
+    "rehype-raw": "^7.0.0",
     "rehype-stringify": "^10.0.1",
     "remark": "^15.0.1",
+    "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.1",
     "remark-stringify": "^11.0.0",
@@ -49,7 +59,7 @@
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
-    "@types/lodash": "^4.17.16",
+    "@types/lodash-es": "^4.17.12",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@types/react-syntax-highlighter": "^15.5.13",
@@ -68,6 +78,12 @@
       "esbuild",
       "meta-json-schema"
     ]
+  },
+  "overrides": {
+    "ahooks": {
+      "react": "$react",
+      "react-dom": "$react-dom"
+    }
   },
   "packageManager": "pnpm@10.6.5"
 }
