--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-process": "^2.2.0",
     "@tauri-apps/plugin-shell": "2.2.0",
+    "@tauri-apps/plugin-store": "~2.2.0",
     "@tauri-apps/plugin-window-state": "^2.2.1",
     "ahooks": "^3.8.4",
     "antd": "^5.24.3",
