--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -43,6 +43,7 @@ tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 tracing-appender = "0.2.3"
 parking_lot = { version = "0.12.3", features = ["arc_lock"] }
 mime_guess = "2.0.5"
+tauri-plugin-store = "2"
 
 
 
