--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "mermaid": "^11.6.0",
     "rc-upload": "^4.8.1",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.4.1",
     "react-markdown": "^10.1.0",
