--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "react-dom": "^19.0.0",
     "react-i18next": "^15.4.1",
     "react-markdown": "^10.1.0",
+    "react-router": "^7.4.0",
+    "react-router-dom": "^7.4.0",
     "react-syntax-highlighter": "^15.6.1",
     "rehype-katex": "^7.0.1",
     "rehype-raw": "^7.0.0",
@@ -73,6 +75,7 @@
     "pretty-quick": "^4.0.0",
     "typescript": "~5.6.2",
     "vite": "^6.0.3",
+    "vite-plugin-pages": "^0.32.5",
     "vite-plugin-svgr": "^4.3.0"
   },
   "pnpm": {
