--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
-    "@ant-design/x": "^1.0.6",
+    "@ant-design/x": "^1.1.0",
     "@svgdotjs/svg.js": "^3.2.4",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-clipboard-manager": "^2.2.1",
@@ -44,6 +44,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.4.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-markdown": "^10.1.0",
     "react-router": "^7.4.0",
     "react-router-dom": "^7.4.0",
